# streamlitextend

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
seedoo/streamlit/: _secret_auth_.json  app.py  event_server.py  nginx_https.sh  tokens_store.py  tracking_executor.py
seedoo/streamlit/frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.js
seedoo/streamlit/frontend/src/: BoundingBoxCanvas.jsx  ErrorBoundry.jsx  ImageCarousal.jsx  TaggingImage.jsx  WebSocketWrapper.js  global_styles.css  index.html  template.html
seedoo/streamlit/frontend/src/modal/: EmptyWrapper.tsx  index.tsx  template.html
seedoo/streamlit/frontend/src/modal/ModalWidget/: modalComponent.tsx  style.ts
seedoo/streamlit/frontend/src/websocket_button/: WebsocketButton.tsx  index.tsx  template.html
seedoo/streamlit/module/: default_module.py
seedoo/streamlit/pages/: test_page.py
seedoo/streamlit/streamlit_login_auth_ui/: utils.py  widgets.py
seedoo/streamlit/utils/: data_processor.py  decorators.py
seedoo/streamlit/widgets/: __init__.py  modal.py  websocket_button.py
