[build-system]
requires = [ "setuptools>=42", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "seedoo.streamlit"
version = "1.0"
description = "Tools as part of seedoo.streamlit package"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.license]
text = "MIT"

[tool.setuptools.packages.find]
include = [ "seedoo*",]
